# ComputationalGeometry

./: .gitignore  CMakeLists.txt  README.md  install.sh  main.cpp
assets/: RefinedCrab.mtl  colinearPlanes.mtl  crab.mtl  doublepiramid.mtl  piramid2.mtl  tetrahedrum_doubled.mtl
assignments/asgn2/: assignment2.fdb_latexmk  assignment2.fls  assignment2.tex
headers/: App.h  Camera.h  Mesh.h  Point3.h  Renderer.h  Shader.h  Vector3.h  WingedEdgeMesh.h
shaders/: shader.frag  shader.vert
source/: App.cpp  Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Vector3.cpp  WingedEdgeMesh.cpp
